--- a/Kafka-Tutorial/src/main/resources/application.properties
+++ b/Kafka-Tutorial/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.servlet.context-path=/kafka/v1
+server.servlet.context-path=/api/v1
 
 spring.application.name=Kafka-Tutorial
 
@@ -12,10 +12,13 @@ spring.kafka.consumer.group-id=myGroup
 # offset we will mention to specify need to consume message from start or latest if  we gave earliest it will consume from last if we 
 # gave latest it will consume from latest and some other properties
 spring.kafka.consumer.auto-offset-reset=earliest
-spring.kafka.consumer.key-deserializer = org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer = org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.deserializer.value.delegate.class=org.springframework.kafka.support.serializer.JsonDeserializer
+
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
 
 spring.kafka.producer.bootstrap-servers=localhost:9092
 spring.kafka.producer.key-serializer = org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer = org.springframework.kafka.support.serializer.JsonS	erializer
+spring.kafka.producer.value-serializer = org.springframework.kafka.support.serializer.JsonSerializer
 
